--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -543,10 +543,14 @@ function inputTextByImage(image) {
              
             <img src="./img/zhiding.png" alt="二维码"  style="width: 50%; display: inline-block; vertical-align:middle;">
 	    <div style="text-align: center;">
-            <img src="./img/gg2.png" alt="点击进入GPT3.5体验网址"  style="width: 88%; display: inline-block; vertical-align:middle;">
-             <img src="./img/gpt.png" alt="点击进入GPT3.5体验网址"  style="width: 88%; display: inline-block; vertical-align:middle;">
-		  <p style="font-size: 20px;" >下方有三个免费账号，请向下滚动屏幕，英文界面，但操作简单，不懂的请点<a href="./img/jiaocheng.png">这里</a>看教程</p>  
-	     <img src="./img/gptac.png" alt="点击进入GPT3.5体验网址"  style="width: 88%; display: inline-block; vertical-align:middle;">
+		<p style="font-size: 20px;" >下方有三个免费账号，请向下滚动屏幕，英文界面，但操作简单，不懂的请点<a href="./img/jiaocheng.png">这里</a>看教程</p>  
+            <img src="./img/gg2.png" alt="免费送GPT"  style="width: 88%; display: inline-block; vertical-align:middle;">
+             <img src="./img/gpt.png" alt="价格说明"  style="width: 88%; display: inline-block; vertical-align:middle;">
+		  <a href="./img/df_gpt.png" target="_blank">		
+             	<img src="./img/df_gpt1.png" alt="区别说明"  style="width: 88%; margin: 20px 0;text-align: center; display: inline-block; vertical-align:middle;">
+		</a>    
+		
+	     <img src="./img/gptac1png.png" alt="报错说明"  style="width: 88%; display: inline-block; vertical-align:middle;">
               
 		<div style="text-align: center; display: inline-block;  margin: 20px 0; width: 88%;">	
 		  <button class="copy-button">复制密码1</button>
