--- a/src/main/resources/web/help.html
+++ b/src/main/resources/web/help.html
@@ -19,4 +19,5 @@
   <img src="./img/buzhou3.png" alt="Image 3">
   <img src="./img/buzhou4.png" alt="Image 4">
   <img src="./img/buzhou5.png" alt="Image 5">
+  <img src="./img/jiaocheng.png" alt="Image 5">
 </body>
