--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -526,7 +526,7 @@ function inputTextByImage(image) {
     <div id="SearchSuggestions">
     </div>
 </div>
-
+<div id="container">
 <div id="body">
    <div id="body-top" style="height: 5%;"> </div>
    <div style="text-align: center;">
@@ -664,7 +664,12 @@ function inputTextByImage(image) {
         </div>
     </div>
 </div>
-
+<!-- Insert the left image -->
+  <img class="imgside" src="img1.jpg" alt="./img/essay_writer.png">
+  <!-- Insert the right image -->
+  <img class="imgside" src="img2.jpg" alt="./img/essay_writer.png">
+ 
+</div>
 </body>
 
 
