--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -528,9 +528,9 @@ function inputTextByImage(image) {
 </div>
 <div id="container">
 <!-- Insert the left image -->
-  <img class="imgside" src="img1.jpg" alt="./img/essay_writer.png">
+  <img class="imgside" src="./img/essay_writer.png" alt="./img/essay_writer.png">
   <!-- Insert the right image -->
-  <img class="imgside" src="img2.jpg" alt="./img/essay_writer.png">
+  <img class="imgside" src="./img/essay_writer.png" alt="./img/essay_writer.png">
  
 <div id="body">
    <div id="body-top" style="height: 5%;"> </div>
