--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -481,9 +481,9 @@ function inputTextByImage(image) {
 <div id="background"></div>
 <div id="container">
 <!-- Insert the left image -->
-  <img class="imgside" src="./img/essay_writer.png" alt="./img/essay_writer.png">
+  <img class="imgside" src="./img/wx.png" alt="./img/essay_writer.png">
   <!-- Insert the right image -->
-  <img class="imgside" src="./img/essay_writer.png" alt="./img/essay_writer.png">
+  <img class="imgside" src="./img/zfb.png" alt="./img/essay_writer.png">
 <div id="head">
     <div id='head-img-div'>
         <img src="./img/nasapod128x128.png" alt="图标">
