--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -548,7 +548,7 @@ function inputTextByImage(image) {
 	    <div style="text-align: center;">
 		<p style="font-size: 25px;" >下方有三个免费账号，请向下滚动屏幕，英文界面，但操作简单，不懂的请点<a href="./help.html">使用帮助</a>看教程</p>  
             <img src="./img/gg2.png" alt="免费送GPT"  style="width: 88%; display: inline-block; vertical-align:middle;">
-             <img src="./img/gpt.png" alt="价格说明"  style="width: 88%; display: inline-block; vertical-align:middle;">
+             <img src="./img/gpt11.png" alt="价格说明"  style="width: 88%; display: inline-block; vertical-align:middle;">
 		  <a href="./img/df_gpt.png" target="_blank">		
              	<img src="./img/df_gpt1.png" alt="区别说明"  style="width: 88%; margin: 20px 0;text-align: center; display: inline-block; vertical-align:middle;">
 		</a>    
