--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -18,6 +18,32 @@
         #images1 {
             white-space: nowrap;
         }
+
+  /* 分类栏样式 */
+	    .category {
+	    	display : flex; 
+	    	align-items : center; 
+	    	justify-content : space-around; 
+	    	height : 100px; 
+	    	padding : 0 20px; 
+	    	background-color : #333; 
+	    } 
+
+	    .category-item { 
+	    	display : flex; 
+	    	flex-direction : column; 
+	    	align-items : center; 
+	    } 
+
+	    .category-icon { 
+	    	width : 40px; 
+	    	height : 40px; 
+	    } 
+
+	    .category-name { 
+	    	margin-top : 10px; 
+	    	font-size : 16px; 
+	    } 
     </style>
     <meta charset="utf-8">
     <title id="docTitle">NewBingGoGo:聊天啦啦啦啦</title>
@@ -545,6 +571,29 @@ function inputTextByImage(image) {
 		</div>
              
             <img src="./img/zzwx.png" alt="二维码"  style="width: 88%; display: inline-block; vertical-align:middle;">
+	<!-- 分类栏 -->
+    <div class="category">
+        <div class="category-item">
+            <img src="category1.png" alt="小说" class="category-icon">
+            <span class="category-name">小说</span>
+        </div>
+        <div class="category-item">
+            <img src="category2.png" alt="电影" class="category-icon">
+            <span class="category-name">电影</span>
+        </div>
+        <div class="category-item">
+            <img src="category3.png" alt="游戏" class="category-icon">
+            <span class="category-name">游戏</span>
+        </div>
+        <div class="category-item">
+            <img src="category4.png" alt="音乐" class="category-icon">
+            <span class="category-name">音乐</span>
+        </div>
+        <div class="category-item">
+            <img src="category5.png" alt="创作" class="category-icon">
+            <span class="category-name">创作</span>
+        </div>
+    </div>
 	    <div style="text-align: center;">
 		<p style="font-size: 25px;" >下方有三个免费账号，请向下滚动屏幕，英文界面，但操作简单，不懂的请点<a href="./help.html">使用帮助</a>看教程</p>  
             <img src="./img/gg2.png" alt="免费送GPT"  style="width: 88%; display: inline-block; vertical-align:middle;">
