--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -36,13 +36,13 @@
 	    } 
 
 	    .category-icon { 
-	    	width : 40px; 
-	    	height : 40px; 
+	    	width : 200px; 
+	    	height : 60px; 
 	    } 
 
 	    .category-name { 
 	    	margin-top : 10px; 
-	    	font-size : 16px; 
+	    	font-size : 25px; 
 	    } 
     </style>
     <meta charset="utf-8">
@@ -574,25 +574,14 @@ function inputTextByImage(image) {
 	<!-- 分类栏 -->
     <div class="category">
         <div class="category-item">
-            <img src="category1.png" alt="小说" class="category-icon">
-            <span class="category-name">小说</span>
+            <img src="./img/gpt35.png" alt="GPT3.5" class="category-icon">
+            <span class="category-name">GPT3.5</span>
         </div>
         <div class="category-item">
-            <img src="category2.png" alt="电影" class="category-icon">
-            <span class="category-name">电影</span>
+            <img src="./img/gpt4.png" alt="GPT4" class="category-icon">
+            <span class="category-name">GPT4</span>
         </div>
-        <div class="category-item">
-            <img src="category3.png" alt="游戏" class="category-icon">
-            <span class="category-name">游戏</span>
-        </div>
-        <div class="category-item">
-            <img src="category4.png" alt="音乐" class="category-icon">
-            <span class="category-name">音乐</span>
-        </div>
-        <div class="category-item">
-            <img src="category5.png" alt="创作" class="category-icon">
-            <span class="category-name">创作</span>
-        </div>
+      
     </div>
 	    <div style="text-align: center;">
 		<p style="font-size: 25px;" >下方有三个免费账号，请向下滚动屏幕，英文界面，但操作简单，不懂的请点<a href="./help.html">使用帮助</a>看教程</p>  
