--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -42,7 +42,8 @@
 
 	    .category-name { 
 	    	margin-top : 10px; 
-	    	font-size : 25px; 
+	    	font-size : 30px; 
+		color:white;		    
 	    } 
     </style>
     <meta charset="utf-8">
