--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -576,11 +576,11 @@ function inputTextByImage(image) {
     <div class="category">
         <div class="category-item">
             <img src="./img/gpt35.png" alt="GPT3.5" class="category-icon">
-            <span class="category-name">GPT3.5</span>
+            <span class="category-name">GPT3.5独立账号</span>
         </div>
         <div class="category-item">
             <img src="./img/gpt4.png" alt="GPT4" class="category-icon">
-            <span class="category-name">GPT4</span>
+            <a href="./help.html" class="category-name">GPT4</a>
         </div>
       
     </div>
