--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -1,6 +1,13 @@
 <html>
 <head>
     <style>
+          .header {
+        background-color: black;
+        color: white;
+        font-size: 40px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
         .container {
             display: flex;
             flex-direction: column;
@@ -66,14 +73,15 @@
 <body>
     <div class="container">
         <div class="green">微软官方GPT4</div>
-        <div class="blue">国内直连，自助服务：19.9元<br><span class="black">国内直连，远程服务：49.9元</span><br><span class="black">免费GPT4计划</span></div>
+        <div class="blue">国内直连，自助服务：19.9元<br><span class="black">国内直连，远程服务：49.9元</span><br><span class="black"></span></div>
+       <div class="header"免费GPT4计划</div>
         <div class="grid">
-    <div class="grid-item orange">10分钟 – 完成GPT-4任务，最长不超过500分钟</div>
-    <div class="grid-item purple">GPT-4服务：数据清洗，数据预处理，数据分析，数据可视化，数据挖掘</div>
-    <div class="grid-item orange">20分钟 – 完成GPT-4任务，最长不超过1000分钟</div>
-    <div class="grid-item purple">GPT-4服务：文本生成，文本摘要，文本翻译，文本校对，文本分类</div>
-    <div class="grid-item orange">30分钟 – 完成GPT-4任务，最长不超过1500分钟</div>
-    <div class="grid-item purple">GPT-4服务：图像生成，图像编辑，图像识别，图像风格转换，图像分类</div>
+    <div class="grid-item orange">1个赞兑换一天初级版GPT4会员，最多兑换365天</div>
+    <div class="grid-item purple">GPT4初级版：可以聊天，每次会话可进行10轮对话，不限会话次数，不限流量</div>
+    <div class="grid-item orange">10个赞兑换一天普通版GPT4会员，最多兑换365天</div>
+    <div class="grid-item purple">GPT4普通版：可以聊天，画图，每次会话可进行30轮对话，不限会话次数，不限流量</div>
+    <div class="grid-item orange">500个赞兑换一月全功能版GPT4会员，最多兑换12个月</div>
+    <div class="grid-item purple">全功能版：跟官方完全一致，可上传图片，带聊天记录。</div>
 </div
     </div>
 </body>
