--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -580,7 +580,7 @@ function inputTextByImage(image) {
         </div>
         <div class="category-item">
             <img src="./img/gpt4.png" alt="GPT4" class="category-icon">
-            <a href="./help.html" class="category-name">GPT4</a>
+            <a href="./gpt4.html" class="category-name">GPT4</a>
         </div>
       
     </div>
