--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -20,7 +20,7 @@
             color: white;
             font-size: 40px;
             text-align: center;
-            flex: 1;
+            flex: 0.2;
         }
 
         .blue {
@@ -28,7 +28,7 @@
             color: black;
             font-size: 30px;
             text-align: center;
-            flex: 1;
+            flex: 0.2;
         }
 
         .black {
@@ -73,7 +73,7 @@
 <body>
     <div class="container">
         <div class="green">微软官方GPT4</div>
-        <div class="blue">国内直连，自助服务：19.9元<br><span class="black">国内直连，远程服务：49.9元</span><br><span class="black"></span></div>
+        <div class="blue">国内直连，自助服务：19.9元<br><span class="blue">国内直连，远程服务：49.9元</span><br><span class="black"></span></div>
        <div class="header"免费GPT4计划</div>
         <div class="grid">
     <div class="grid-item orange">1个赞兑换一天初级版GPT4会员，最多兑换365天</div>
