--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -9,10 +9,11 @@
         margin-bottom: 10px;
     }
         .container {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            gap: 15px;
+           display: flex;
+    flex-direction: column;
+    height: 100%;
+    align-items: center; /* 垂直居中 */
+    justify-content: center; /* 水平居中 */
         }
 
         .green {
@@ -26,7 +27,7 @@
         .blue {
             background-color: white;
             color: black;
-            font-size: 30px;
+            font-size: 50px;
             text-align: center;
             flex: 0.2;
         }
