--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -9,11 +9,10 @@
         margin-bottom: 10px;
     }
         .container {
-           display: flex;
-    flex-direction: column;
-    height: 100%;
-    align-items: center; /* 垂直居中 */
-    justify-content: center; /* 水平居中 */
+             display: flex;
+            flex-direction: column;
+            height: 100%;
+            gap: 15px;
         }
 
         .green {
