--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -4,7 +4,7 @@
           .header {
         background-color: black;
         color: white;
-        font-size: 40px;
+        font-size: 30px;
         text-align: center;
         margin-bottom: 10px;
     }
@@ -25,8 +25,8 @@
 
         .blue {
             background-color: white;
-            color: black;
-            font-size: 50px;
+            color: red;
+            font-size: 35px;
             text-align: center;
             flex: 0.1;
         }
@@ -74,7 +74,8 @@
     <div class="container">
         <div class="green">微软官方GPT4</div>
         <div class="blue">国内直连，自助服务：19.9元<br><span class="blue">国内直连，远程服务：49.9元</span><br><span class="black"></span></div>
-       <div class="header"免费GPT4计划</div>
+       <div class="header">免费GPT4计划</div>
+        
         <div class="grid">
     <div class="grid-item orange">1个赞兑换一天初级版GPT4会员，最多兑换365天</div>
     <div class="grid-item purple">GPT4初级版：可以聊天，每次会话可进行10轮对话，不限会话次数，不限流量</div>
