--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -1,10 +1,31 @@
 <html>
 <head>
     <style>
-          .header {
-        background-color: black;
-        color: white;
+          .header1 {
+        background-color: #CACAEA;
+        color: black ;
         font-size: 30px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+            .header2 {
+        background-color: white;
+        color: black;
+        font-size: 25px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+                 .header3 {
+        background-color: white;
+        color: red;
+        font-size: 25px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+                .header4 {
+        background-color: white;
+        color: red;
+        font-size: 50px;
         text-align: center;
         margin-bottom: 10px;
     }
@@ -18,7 +39,7 @@
         .green {
             background-color: black;
             color: white;
-            font-size: 40px;
+            font-size: 80px;
             text-align: center;
             flex: 0.1;
         }
@@ -73,9 +94,11 @@
 <body>
     <div class="container">
         <div class="green">微软官方GPT4</div>
-        <div class="blue">国内直连，自助服务：19.9元<br><span class="blue">国内直连，远程服务：49.9元</span><br><span class="black"></span></div>
-       <div class="header">免费GPT4计划</div>
-        
+        <div class="blue">国内直连，自助服务：19.9元<br><span class="blue">国内直连，远程服务：49.9元</span><br><span class="black">网站首页微信扫码联系站长</span></div>
+       <div class="header1">GPT4会员免费兑换计划</div>
+        <div class="header2">GPT4会员免费得：在抖**音，快**手，小**红**书三个平台发布推广视频或图文，并带上：</div>
+         <div class="header3">好用AI网站，无需注册，免费使用(点换成.)</div>
+        <div class="header4">good点nwtbing点asia</div>
         <div class="grid">
     <div class="grid-item orange">1个赞兑换一天初级版GPT4会员，最多兑换365天</div>
     <div class="grid-item purple">GPT4初级版：可以聊天，每次会话可进行10轮对话，不限会话次数，不限流量</div>
