--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -47,7 +47,7 @@
         .blue {
             background-color: white;
             color: red;
-            font-size: 35px;
+            font-size: 45px;
             text-align: center;
             flex: 0.1;
         }
@@ -94,9 +94,13 @@
 <body>
     <div class="container">
         <div class="green">微软官方GPT4</div>
-        <div class="blue">国内直连，自助服务：19.9元<br><span class="blue">国内直连，远程服务：49.9元</span><br><span class="black">网站首页微信扫码联系站长</span></div>
+        <div class="blue">国内直连，自助服务：19.9元<br><span class="blue">国内直连，远程服务：49.9元</span><br><span class="black">返回网站首页微信扫码联系站长</span></div>
+         <div class="header1">100人以上群主免费送全功能版GPT4</div>
+        <div class="header2">抖音，QQ，快手，微信，小红书等各大主流平台，自建群人数超过100人</div>
+         <div class="header3">群内每成交一单，返佣10块</div>
+        
        <div class="header1">GPT4会员免费兑换计划</div>
-        <div class="header2">GPT4会员免费得：在抖**音，快**手，小**红**书三个平台发布推广视频或图文，并带上：</div>
+        <div class="header2">GPT4会员免费得：在抖音，快手，小红书三个平台发布推广视频或图文，并带上：</div>
          <div class="header3">好用AI网站，无需注册，免费使用(点换成.)</div>
         <div class="header4">good点nwtbing点asia</div>
         <div class="grid">
