--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -94,7 +94,7 @@
 <body>
     <div class="container">
         <div class="green">微软官方GPT4</div>
-        <div class="blue">国内直连，自助服务：19.9元<br><span class="blue">国内直连，远程服务：49.9元</span><br><a href="./NewBingGoGo.html"class="black">返回网站首页微信扫码联系站长</span></div>
+        <div class="blue">国内直连，自助服务：19.9元<br><span class="blue">国内直连，远程服务：49.9元</span><br><a href="./NewBingGoGo.html"class="black">返回网站首页微信扫码联系站长</a></div>
          <div class="header1">100人以上群主免费送全功能版GPT4</div>
         <div class="header2">抖音，QQ，快手，微信，小红书等各大主流平台，自建群人数超过100人</div>
          <div class="header3">群内每成交一单，返佣10块</div>
