--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -579,7 +579,9 @@ function inputTextByImage(image) {
             <span class="category-name">GPT3.5独立账号</span>
         </div>
         <div class="category-item">
+		 <a href="./gpt4.html">
             <img src="./img/gpt4.png" alt="GPT4" class="category-icon">
+		 </a>
             <a href="./gpt4.html" class="category-name">GPT4</a>
         </div>
       
