--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -2,7 +2,7 @@
 <head>
     <style>
           .header1 {
-        background-color: #CACAEA;
+        background-color: #4Abdac;
         color: black ;
         font-size: 50px;
         text-align: center;
@@ -26,6 +26,20 @@
         background-color: white;
         color: red;
         font-size: 50px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+                  .header5 {
+        background-color: #062F4F;
+        color: white;
+        font-size: 50px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+               .header2 {
+        background-color: white;
+        color: black;
+        font-size: 35px;
         text-align: center;
         margin-bottom: 10px;
     }
@@ -95,9 +109,9 @@
     <div class="container">
         <div class="green">微软官方GPT4</div>
         <div class="blue">国内直连，自助服务：19.9元<br><span class="blue">国内直连，远程服务：49.9元</span><br><a href="./NewBingGoGo.html"class="black">返回网站首页微信扫码联系站长</a></div>
-         <div class="header1">100人以上群主免费送全功能版GPT4</div>
+         <div class="header5">100人以上群主免费送全功能版GPT4</div>
         <div class="header2">抖音，QQ，快手，微信，小红书等各大主流平台，自建群人数超过100人</div>
-         <div class="header3">群内每成交一单，返佣10块</div>
+         <div class="header2">群内每成交一单，返佣10块</div>
         
        <div class="header1">GPT4会员免费兑换计划</div>
         <div class="header2">GPT4会员免费得：在抖音，快手，小红书三个平台发布推广视频或图文，并带上：</div>
