Update and rename gpt3.5gtp4 to gpt3.5gtp4.html

--- a/src/main/resources/web/gpt3.5gtp4.html
+++ b/src/main/resources/web/gpt3.5gtp4.html
@@ -109,12 +109,23 @@
     <div class="container">
       
         <div class="grid">
-    <div class="grid-item orange">1个赞兑换一天初级版GPT4会员，最多兑换365天</div>
-    <div class="grid-item purple">GPT4初级版：可以聊天，每次会话可进行10轮对话，不限会话次数，不限流量</div>
-    <div class="grid-item orange">10个赞兑换一天普通版GPT4会员，最多兑换365天</div>
-    <div class="grid-item purple">GPT4普通版：可以聊天，画图，每次会话可进行30轮对话，不限会话次数，不限流量</div>
-    <div class="grid-item orange">500个赞兑换一月全功能版GPT4会员，最多兑换12个月</div>
-    <div class="grid-item purple">全功能版：跟官方完全一致，可上传图片，带聊天记录。</div>
+    <div class="grid-item orange">GPT4能理解的上下文长度为32000字</div>
+    <div class="grid-item purple">GPT3.5只能理解3000字的上下文长度</div>
+    <div class="grid-item orange">GPT4在司法考试，SAT数学考试，生物奥林匹克竞赛等方面表现优异</div>
+    <div class="grid-item purple">GPT3.5在这些考试中表现较差</div>
+    <div class="grid-item orange">GPT4的英语和中文准确度都有大幅提升</div>
+    <div class="grid-item purple">GPT3.5的准确度有待提高，有时会给出离谱的答案</div>
+ <div class="grid-item orange">GPT4展现出了更多的常识，可以综合不同领域或模态的信息，显示出对复杂思想的深刻理解</div>
+    <div class="grid-item purple">GPT3.5的常识较少，有时会出现逻辑错误或矛盾</div>
+    <div class="grid-item orange">GPT4可以根据指令编写代码，理解现有代码，对代码执行进行推理，检测和改进错误，精通不同的程序语言</div>
+    <div class="grid-item purple">GPT3.5也可以编写代码，但是整体编写能力比GPT4要弱</div>
+    <div class="grid-item orange">新必应是Bing搜索和GPT4的结合体，具备bing搜索的联网搜索功能和GPT4自然语言处理能力</div>
+    <div class="grid-item purple">GPT3.5不能联网，只能根据训练好的能力来回答用户的提问</div>
+ <div class="grid-item orange">微软整合了图片创造者到新必应中，使用新必应的创造力模式就可以直接生成图片，并且图片没有限制，随意生成</div>
+    <div class="grid-item purple"GPT3.5不支持用文字生成图片</div>
+    <div class="grid-item orange">GPT4支持上传图片，它可以识别并描述图片中的内容，帮助实现某些无法用语言表达的场景</div>
+    <div class="grid-item purple">GPT3.5不能上传图片</div>
+    
 </div
     </div>
 </body>
