--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -584,7 +584,7 @@ function inputTextByImage(image) {
       
     </div>
 	    <div style="text-align: center;">
-		     <a href="./img/df_gpt.png" target="_blank">		
+		     <a href="./gpt3.5gtp4.html" target="_blank">		
              	<img src="./img/df_gpt1.png" alt="区别说明"  style="width: 88%; margin: 10px 0;text-align: center; display: inline-block; vertical-align:middle;">
 		</a>    
 		    <p style="font-size: 20px;" >需要独立账号请联系站长，19.9一年</p> 
