--- a/src/main/resources/web/gpt3.5gtp4.html
+++ b/src/main/resources/web/gpt3.5gtp4.html
@@ -122,7 +122,7 @@
     <div class="grid-item orange">新必应是Bing搜索和GPT4的结合体，具备bing搜索的联网搜索功能和GPT4自然语言处理能力</div>
     <div class="grid-item purple">GPT3.5不能联网，只能根据训练好的能力来回答用户的提问</div>
  <div class="grid-item orange">微软整合了图片创造者到新必应中，使用新必应的创造力模式就可以直接生成图片，并且图片没有限制，随意生成</div>
-    <div class="grid-item purple"GPT3.5不支持用文字生成图片</div>
+    <div class="grid-item purple">GPT3.5不支持用文字生成图片</div>
     <div class="grid-item orange">GPT4支持上传图片，它可以识别并描述图片中的内容，帮助实现某些无法用语言表达的场景</div>
     <div class="grid-item purple">GPT3.5不能上传图片</div>
     
