--- a/src/main/resources/web/gpt3.5gtp4.html
+++ b/src/main/resources/web/gpt3.5gtp4.html
@@ -126,7 +126,8 @@
     <div class="grid-item orange">GPT4支持上传图片，它可以识别并描述图片中的内容，帮助实现某些无法用语言表达的场景</div>
     <div class="grid-item purple">GPT3.5不能上传图片</div>
     
-</div
+</div>
+<P>返回首页</P>
     </div>
 </body>
 </html>
