--- a/src/main/resources/web/gpt3.5gtp4.html
+++ b/src/main/resources/web/gpt3.5gtp4.html
@@ -107,7 +107,7 @@
 </head>
 <body>
     <div class="container">
-      
+        <div class="blue"><a href="./NewBingGoGo.html"class="black">返回网站首页</a></div>
         <div class="grid">
     <div class="grid-item orange">GPT4能理解的上下文长度为32000字</div>
     <div class="grid-item purple">GPT3.5只能理解3000字的上下文长度</div>
