--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -22,10 +22,11 @@
   /* 分类栏样式 */
 	    .category {
 	    	display : flex; 
+		    width: 88%;
 	    	align-items : center; 
 	    	justify-content : space-around; 
-	    	height : 100px; 
-	    	padding : 0 20px; 
+	    	height : 120px; 
+	    	padding : 10 20px; 
 	    	background-color : #333; 
 	    } 
 
@@ -579,7 +580,7 @@ function inputTextByImage(image) {
 		 <a href="./gpt4.html">
             <img src="./img/gpt4.png" alt="GPT4" class="category-icon">
 		 </a>
-            <a href="./gpt4.html" class="category-name">微软官方版GPT4</a>
+            <a href="./gpt4.html" class="category-name">点击免费获取微软官方版GPT4</a>
         </div>
       
     </div>
