--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -22,7 +22,7 @@
   /* 分类栏样式 */
 	    .category {
 	    	display : flex; 
-		    width: 88%;
+		width: 88%;
 	    	align-items : center; 
 	    	justify-content : space-around; 
 	    	height : 120px; 
@@ -576,7 +576,7 @@ function inputTextByImage(image) {
 	<!-- 分类栏 -->
     <div class="category">
         
-        <div class="category-item">
+        <div class="category-item" style="text-align: center;">
 		 <a href="./gpt4.html">
             <img src="./img/gpt4.png" alt="GPT4" class="category-icon">
 		 </a>
