--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -23,6 +23,7 @@
 	    .category {
 	    	display : flex; 
 		width: 88%;
+		margin: 0 auto;
 	    	align-items : center; 
 	    	justify-content : space-around; 
 	    	height : 120px; 
