--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -589,8 +589,8 @@ function inputTextByImage(image) {
 		     <a href="./gpt3.5gtp4.html" target="_blank">		
              	<img src="./img/df_gpt1.png" alt="区别说明"  style="width: 88%; margin: 10px 0;text-align: center; display: inline-block; vertical-align:middle;">
 		</a>    
-		    <p style="font-size: 20px; " >扫码联系站长免费领取一月初级版GPT4</p> 
-		     <p style="font-size: 20px;" >需要独立账号请联系站长，19.9一年</p> 
+		    <p style="font-size: 20px; " >扫码联系站长免费领取初级版GPT4</p> 
+		     <p style="font-size: 20px;" >独立3.5账号请联系站长，19.9一年</p> 
 		<p style="font-size: 20px;" >下方有三个免费GPT3.5账号，<a href="./help.html">使用帮助</a></p>  
           
 		 
