--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -62,8 +62,10 @@
     flex-direction: column;
     height: 100%;
     gap: 15px;
+    margin: 0 auto; /* 添加左右自动外边距 */
   }
 }
+
 
         
        
