--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -127,7 +127,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="green">点击获取微软官方GPT4</div>
+        <div class="green">微软官方GPT4：扫码联系站长获取</div>
         <div class="blue">国内直连，自助服务：19.9元<br><span class="blue">国内直连，远程服务：49.9元</span><br><a href="./NewBingGoGo.html"class="black">返回网站首页扫码联系站长</a></div>
          <div class="header5">100人以上群主免费送全功能版GPT4</div>
         <div class="header2">自建群人数超过100人</div>
