--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -127,24 +127,16 @@
 </head>
 <body>
     <div class="container">
-        <div class="green">微软官方GPT4：扫码联系站长获取</div>
-        <div class="blue">国内直连，自助服务：19.9元<br><span class="blue">国内直连，远程服务：49.9元</span><br><a href="./NewBingGoGo.html"class="black">返回网站首页扫码联系站长</a></div>
-         <div class="header5">100人以上群主免费送全功能版GPT4</div>
+        <div class="green">微软官方GPT4免费使用</div>
+        <div class="blue">免费试用7天<br><a href="./NewBingGoGo.html"class="black">返回网站首页扫码联系站长</a></div>
+         <div class="header5">100人以上群主免费送GPT4</div>
         <div class="header2">自建群人数超过100人</div>
          <div class="header2">群内每成交一单，返佣10块</div>
         
-       <div class="header1">GPT4会员免费兑换计划</div>
-        <div class="header2">GPT4会员免费得：发布推广视频或图文，并带上：</div>
-         <div class="header3">好用AI网站，无需注册，免费使用(点换成.)</div>
-        <div class="header4">good点nwtbing点asia</div>
-        <div class="grid">
-    <div class="grid-item orange">1个赞兑换一天初级版GPT4会员，最多兑换365天</div>
-    <div class="grid-item purple">GPT4初级版：可以聊天，每次会话可进行10轮对话，不限会话次数，不限流量</div>
-    <div class="grid-item orange">10个赞兑换一天普通版GPT4会员，最多兑换365天</div>
-    <div class="grid-item purple">GPT4普通版：可以聊天，画图，每次会话可进行30轮对话，不限会话次数，不限流量</div>
-    <div class="grid-item orange">500个赞兑换一月全功能版GPT4会员，最多兑换12个月</div>
-    <div class="grid-item purple">全功能版：跟官方完全一致，可上传图片，带聊天记录。</div>
-</div
+       <div class="header1">GPT4会员免费使用计划</div>
+        <div class="header2">试用期内每推广两名新成员加入免费使用计划</div>
+         <div class="header3">赠送一月使用时长，上不封顶</div>        
+        
     </div>
 </body>
 </html>
