--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -133,10 +133,10 @@
         <div class="header2">自建群人数超过100人</div>
          <div class="header2">群内每成交一单，返佣10块</div>
         
-       <div class="header1">GPT4会员免费使用计划</div>
-        <div class="header2">试用期内每推广两名新成员加入免费使用计划</div>
-         <div class="header3">赠送一月使用时长，上不封顶</div>        
-        
+       <div class="header1">GPT4会员免费使用计划（国内直连）</div>
+        <div class="header2">每推广1名新成员加入免费使用计划，赠送一月使用时长</div>
+         <div class="header3">每推广5名新成员加入免费使用计划，赠送半年使用时长</div>        
+         <div class="header3">推广人数不限，赠送时长不封顶</div>     
     </div>
 </body>
 </html>
