--- a/src/main/resources/web/gpt4.html
+++ b/src/main/resources/web/gpt4.html
@@ -138,5 +138,8 @@
          <div class="header3">每推广5名新成员加入免费使用计划，赠送半年使用时长</div>        
          <div class="header3">推广人数不限，赠送时长不封顶</div>     
     </div>
+  <div class="header2">GPT4免费网址：<a href="https://you.nwtbing.asia/"class="black">https://you.nwtbing.asia/</a></div>
+           
+    </div>
 </body>
 </html>
