--- a/src/main/resources/web/NewBingGoGo.html
+++ b/src/main/resources/web/NewBingGoGo.html
@@ -588,6 +588,7 @@ function inputTextByImage(image) {
 	    <div style="text-align: center;">
 		    
 		    <p style="font-size: 20px; color: red;" >为了更好适应大家需求，现关闭GPT3.5帐号，全部升级GPT4.0</p> 
+		    <p style="font-size: 20px; color: red;" >下方三个GPT4.0网址，免费使用</p> 
 		     <p style="font-size: 20px;" >独立3.5账号请联系站长，19.9一年</p> 
               
 		<div style="text-align: center; display: inline-block;  margin: 20px 0; width: 88%;">	
