--- a/src/main/resources/web/anli.html
+++ b/src/main/resources/web/anli.html
@@ -53,6 +53,7 @@
   </ul>
     <h1>数学</h1>
   <ul>
+    <li><a href="./数学题小学表格.html">高等数学</a></li>   
     <li><a href="./高等数学1.html">高等数学</a></li>   
     <li><a href="./经典初中数学1.html">经典初中数学</a></li>
     <li><a href="./数学50的50次幂.html">数学50的50次幂</a></li>
@@ -88,6 +89,7 @@
     <li><a href="./小红书文案.html">小红书文案</a></li>
     <li><a href="./占卜师.html">占卜师</a></li>
     <li><a href="./制作鹅汤的宣传文案.html">制作鹅汤的宣传文案</a></li>
+    <li><a href="./cpu.html">制作鹅汤的宣传文案</a></li>
    
   </ul>
       <h1>画图咒语</h1>
